Fixed form spacing and overflowing

--- a/src/css/signIn.css
+++ b/src/css/signIn.css
@@ -44,6 +44,12 @@
   padding: 0 100px 0 100px;
 }
 
+#signInForm {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
 .logo__si {
   display: flex;
   justify-content: space-between;
